src-tauri/build_log_final_check.txt
    Checking tauri-app v0.1.0 (D:\WindowsProyects\Antigravity\Fork\src-tauri)
error[E0277]: the trait bound `ArrayBase<OwnedRepr<u32>, Dim<[usize; 2]>>: OwnedTensorArrayData<_>` is not satisfied
   --> src\core\local_llm.rs:43:57
    |
 43 |         let input_value = ort::value::Value::from_array(input_tensor).map_err(|e| e.to_string())?;
    |                           ----------------------------- ^^^^^^^^^^^^ the trait `OwnedTensorArrayData<_>` is not implemented for `ArrayBase<OwnedRepr<u32>, Dim<[usize; 2]>>`
    |                           |
    |                           required by a bound introduced by this call
    |
help: the following other types implement trait `OwnedTensorArrayData<I>`
   --> C:\Users\IK\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\ort-2.0.0-rc.11\src\value\impl_tensor\create.rs:443:1
    |
443 | impl<T: Clone + 'static, D: Dimension + 'static> OwnedTensorArrayData<T> for Array<T, D> {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `ndarray::ArrayBase<ndarray::data_repr::OwnedRepr<T>, D>`
...
554 | impl<T: Clone + 'static, D: ToShape> OwnedTensorArrayData<T> for (D, Vec<T>) {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `(D, Vec<T>)`
...
570 | impl<T: Clone + 'static, D: ToShape> OwnedTensorArrayData<T> for (D, Box<[T]>) {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `(D, Box<[T]>)`
note: required by a bound in `ort::value::impl_tensor::create::<impl ort::value::Value<TensorValueType<T>>>::from_array`
   --> C:\Users\IK\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\ort-2.0.0-rc.11\src\value\impl_tensor\create.rs:140:32
    |
140 |     pub fn from_array(input: impl OwnedTensorArrayData<T>) -> Result<Tensor<T>> {
    |                                   ^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `ort::value::impl_tensor::create::<impl Value<TensorValueType<T>>>::from_array`

error[E0599]: no method named `map_err` found for struct `Vec<(Cow<'_, str>, SessionInputValue<'_>)>` in the current scope
  --> src\core\local_llm.rs:47:59
   |
47 |             .run(ort::inputs!["input_ids" => input_value].map_err(|e| e.to_string())?)
   |                                                           ^^^^^^^
   |
help: there is a method `sink_map_err` with a similar name
   |
47 |             .run(ort::inputs!["input_ids" => input_value].sink_map_err(|e| e.to_string())?)
   |                                                           +++++

error[E0282]: type annotations needed
  --> src\core\local_llm.rs:47:68
   |
47 |             .run(ort::inputs!["input_ids" => input_value].map_err(|e| e.to_string())?)
   |                                                                    ^  - type must be known at this point
   |
help: consider giving this closure parameter an explicit type
   |
47 |             .run(ort::inputs!["input_ids" => input_value].map_err(|e: /* Type */| e.to_string())?)
   |                                                                     ++++++++++++

Some errors have detailed explanations: E0277, E0282, E0599.
For more information about an error, try `rustc --explain E0277`.
error: could not compile `tauri-app` (lib) due to 3 previous errors
